--- a/main.html
+++ b/main.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	
+<h1> Why I want to become a developer?</h1>
+	<p>
+		As having interest in algorithms and having knowlwdge of building algorithms i thought of becoming an developer.
+		I want to build systems which can handle much more traffic and useful to society
+	</p>
 
 </body>
 
